--- a/dashboard.html
+++ b/dashboard.html
@@ -20,9 +20,9 @@
 <link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/model.0139f19a.js">
 <link rel="modulepreload" href="./_import/components/budgetAllocator.46c04ac3.js">
-<link rel="modulepreload" href="./_import/components/miniDecarbModel.d0583510.js">
+<link rel="modulepreload" href="./_import/components/miniDecarbModel.896b53aa.js">
 <link rel="modulepreload" href="./_import/components/sorterTable.b455407f.js">
-<link rel="modulepreload" href="./_import/components/timeline.3ff6c72d.js">
+<link rel="modulepreload" href="./_import/components/timeline.3a79ace5.js">
 <link rel="modulepreload" href="./_import/components/helpers.cfd3e683.js">
 <link rel="modulepreload" href="./_import/components/utils.ca7eec9b.js">
 <link rel="modulepreload" href="./_npm/d3@7.9.0/_esm.js">
@@ -207,14 +207,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1732263159721});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1732263159729});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1732263159729});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1732263159729});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1732330954745});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1732330954757});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1732330954757});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1732330954757});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
 define({id: "06001a1f", outputs: ["d3","flubber","require","Mutable","TimeGlyph","GlyphCollection","turf","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","Model","BudgetAllocator","MiniDecarbModel","createTable","createTimelineInterface","inferTypes","enrichGeoData","normaliseData","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {createTimelineInterface}, {inferTypes, enrichGeoData, normaliseData}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.d0583510.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/timeline.3ff6c72d.js"), import("./_import/components/helpers.cfd3e683.js"), import("./_import/components/utils.ca7eec9b.js")]);
+const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {createTimelineInterface}, {inferTypes, enrichGeoData, normaliseData}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.896b53aa.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/timeline.3a79ace5.js"), import("./_import/components/helpers.cfd3e683.js"), import("./_import/components/utils.ca7eec9b.js")]);
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
 
@@ -413,15 +413,30 @@ resize((width, height) => createGlyphMap(map_aggregate, {width, height}))
 ))
 }});
 
-define({id: "69b1b79f", mode: "inline", inputs: ["createTimelineInterface","interventions","display"], body: async (createTimelineInterface,interventions,display) => {
+define({id: "42bc8a72", mode: "inline", inputs: ["createTimelineInterface","interventions","selectIntervention","display"], body: async (createTimelineInterface,interventions,selectIntervention,display) => {
 display(await(
 createTimelineInterface(
             interventions, 
             () => {},
-            (click) => {console.log("click", click)},
+            (click) => {
+              selectIntervention(click);
+              console.log("clicked block", click);
+              },
             600,
             200
           )
+))
+}});
+
+define({id: "4701b4bf", mode: "inline", inputs: ["html","display"], body: async (html,display) => {
+display(await(
+html`<button class="btn erase" aria-label="Delete" 
+          onclick=${(e) => {
+            e.stopPropagation();
+            console.log("clicked block", e);
+            }}>
+            <i class="fas fa-trash" style="color:red;"></i>
+          </button>`
 ))
 }});
 
@@ -431,9 +446,10 @@ resize((width, height) => drawDetailOnDemand(width, height))
 ))
 }});
 
-define({id: "8599d8e2", inputs: ["setSelectedIntervention","results","interventions"], outputs: ["selectedInterventionIndex","selectIntervention"], body: (setSelectedIntervention,results,interventions) => {
+define({id: "e78cdcee", inputs: ["setSelectedIntervention","results","interventions"], outputs: ["selectedInterventionIndex","selectIntervention"], body: (setSelectedIntervention,results,interventions) => {
 // for dealing with selected list items
 let selectedInterventionIndex = null; // Track the selected intervention index
+console.log("selectedInterventionIndex: ", selectedInterventionIndex);
 
 function selectIntervention(index) {
   // Update the selected index
@@ -820,10 +836,14 @@ console.log("selectedIntervention", selectedIntervention);
 // );
 }});
 
-define({id: "20a53822", outputs: ["cols"], body: () => {
+define({id: "c01c20eb", outputs: ["cols"], body: () => {
 // columns to show in the table
 const cols = [
   { column: "id", nominals: null },
+  {
+    column: "intervention",
+    nominals: null,
+  },
   { column: "lsoa", nominals: null },
   {
     column: "insulation_rating",
@@ -845,10 +865,6 @@ const cols = [
   {
     column: "ashp_size",
     thresholds: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50],
-  },
-  {
-    column: "intervention",
-    nominals: null,
   },
 ];
 return {cols};
@@ -1809,15 +1825,13 @@ body, html {
       <br>
       <div id="graph-container">
         <div id="timeline-panel">
-          <observablehq-loading></observablehq-loading><!--:69b1b79f:-->
+          <observablehq-loading></observablehq-loading><!--:42bc8a72:-->
         </div>
         <nav id="timeline-buttons">
           <button class="btn edit" aria-label="Edit">
             <i class="fas fa-edit" style="color:green;"></i>
           </button>
-          <button class="btn erase" aria-label="Delete">
-            <i class="fas fa-trash" style="color:red;"></i>
-          </button>
+          <observablehq-loading></observablehq-loading><!--:4701b4bf:-->
           <button class="btn move-up" aria-label="Move Up">
             <i class="fas fa-arrow-up"></i>
           </button>
@@ -1833,7 +1847,7 @@ body, html {
     </div>
   </div>
 </div>
-<div class="observablehq observablehq--block"><!--:8599d8e2:--></div>
+<div class="observablehq observablehq--block"><!--:e78cdcee:--></div>
 <div class="observablehq observablehq--block"><!--:09682a6e:--></div>
 <!-- ---------------- Input form declarations ---------------- -->
 <div class="observablehq observablehq--block"><!--:5ce378d0:--></div>
@@ -1847,7 +1861,7 @@ body, html {
 <div class="observablehq observablehq--block"><!--:a84f1691:--></div>
 <div class="observablehq observablehq--block"><!--:8216304d:--></div>
 <!-- ---------------- Sortable Table ---------------- -->
-<div class="observablehq observablehq--block"><!--:20a53822:--></div>
+<div class="observablehq observablehq--block"><!--:c01c20eb:--></div>
 <div class="observablehq observablehq--block"><!--:ab9f8eb4:--></div>
 <div class="observablehq observablehq--block"><!--:929663a0:--></div>
 <!-- ---------------- Glyph Maps ---------------- -->
